tetris windows github action